# concordia-cli

./: .gitignore  CI_CD_FIXES.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING_IMPLEMENTATION.md  config.py  example_usage.py  initialization.py  main.py  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  test-df-creds.yaml  test-missing-creds.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  quality.yml  release.yml  test.yml
actions/init/: config.py  initialization.py
actions/looker/: bigquery_client.py  config_loader.py  field_utils.py  generate.py  lookml_base_dict.py  lookml_explore_module.py  lookml_generator.py  lookml_measure_module.py  lookml_module.py
actions/models/: config.py  lookml.py  metadata.py
actions/utils/: config_docs.py  config_validator.py  safe_print.py
tests/: README.md  conftest.py
tests/fixtures/: config_fixtures.py
tests/integration/: test_generate_command.py  test_init_command.py
tests/unit/: test_bigquery_client.py  test_config.py  test_config_docs.py  test_config_loader.py  test_config_validator.py  test_field_utils.py  test_help.py  test_lookml_explore_module.py  test_lookml_generator.py  test_lookml_measure_module.py  test_lookml_module.py  test_models_config.py  test_models_lookml.py  test_models_metadata.py  test_utils.py
