[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "concordia-cli"
version = "0.1.0"
description = "Concordia CLI - Generate LookML from your data warehouse"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Concordia" }]
dependencies = [
  "click",
  "pyyaml",
  "google-cloud-bigquery>=3.0.0",
  "google-auth>=2.0.0",
  "jinja2>=3.0.0",
  "lkml>=1.3.0",
  "pandas>=1.5.0",
  "pandas-gbq>=0.19.0",
  "pydantic>=2.0.0",
  "ruamel.yaml>=0.17.0",
]

[project.scripts]
concordia = "main:cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["actions*"]

